# masto-gitsocial-bridge

./: README.md  post-commit.sample  pyproject.toml
masto_git_bridge/: bot.py  config.py  logger.py  main.py  models.py  post.py  repo.py
